# xmpp-gui

./: Cargo.toml  LICENSE  README.md
counter-example/: Cargo.toml
counter-example/src/: main.rs
gui/: Cargo.toml
gui/src/: app.rs  client.rs  connection_handler.rs  main.rs  text_handler.rs
src/: client.rs  main.rs
text_example/: Cargo.toml
text_example/src/: main.rs
xmpp-client-example/: Cargo.toml  tree.txt
xmpp-client-example/src/: main.rs
