[package]
name = "gui"
version = "0.1.0"
authors = ["moh <mohamm.alsaid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3"
futures = "0.3"
tokio = "1"
xmpp = {git = "https://gitlab.com/xmpp-rs/xmpp-rs.git", branch = "main"}