[package]
name = "xmpp-client-example"
version = "0.1.0"
authors = ["mohamm-alsaid <mohamm.alsaid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#sasl = "0.5.0"
#native-tls = "0.2.7"
#xmpp-rs = "0.1.2"

[dependencies]
tokio-xmpp = "3.0.0"
xmpp-parsers = "0.18"
futures = "0.3"
tokio = "1"
log = "0.4"

#[dev-dependencies]
env_logger = "0.8"
